src/Components/CartScreen.css
.cart-screen-container {
  position: relative;
  top: 75px;
  border: 1px solid rgba(34, 36, 38, 0.15);
  box-shadow: 0 1px 2px 0 rgb(34 36 38 / 15%);
}

.cart-items-header {
  display: flex;
  max-width: 1000px;
  margin: 0 auto;
  justify-content: center;
  border-bottom: 2px solid black;
  padding: 11px;
  margin-bottom: 10px;
}
.clear-cart {
  position: relative;
  top: 15px;
  float: right;
  padding: 5px;
  border: none;
  cursor: pointer;
  flex: 0.1;
  height: 26px;
}

.clear-cart:hover {
  border: 1px solid rgba(34, 36, 38, 0.15);
  border-radius: 4px;
}

.cart-container {
  max-width: 1000px;
  padding-bottom: 42px;
  margin: 0 auto;
}

.items {
  display: flex;
  margin-bottom: 20px;
  flex: 0.9;
  align-items: center;
}

.item-image {
  width: 80px;
  height: 60px;
  flex: 0.1;
}

.item-title {
  flex: 0.6;
}

.increase-quantity,
.decrease-quantity {
  flex: 0.05 1;
  position: relative;
  top: -5px;
  margin-right: 10px;
  border: 1px solid rgba(34, 36, 38, 0.15);
  border-radius: 4px;
  cursor: pointer;
}

.quantity-price {
  flex: 0.2;
  position: relative;
  top: -5px;
}

.item-image img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.total-price-container {
  display: flex;
  border-top: 2px solid black;
  padding-top: 10px;
}

.total,
.total-price {
  margin: 0;
}

.total {
  margin-left: 10.5%;
  flex: 0.8;
}

.total-price {
  margin-left: 4%;
  flex: 0.2;
}

@media screen and (max-width: 768px) {
  .cart-container {
    flex-direction: column;
  }
}

@media screen and (max-width: 350px) {
  .item-title {
    flex: 0.5;
  }
  .quantity-price {
    flex: 0.3;
  }
}

